<resources>
    <string name="app_name">ProyectoFinalDeGrado</string>
    <string name="Welcome">Bienvenido</string>
    <string name="user_placeholder">User</string>
    <string name="password_et">Contraseña</string>
    <string name="new_to_platform">Eres nuevo en la plataforma? Registrate</string>
    <string name="login">Iniciar Sesión</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="createAccount_btm">crear una cuenta</string>
    <string name="confirma_la_contrase_a">Confirma la contraseña</string>
</resources>